--- a/style.css
+++ b/style.css
@@ -62,7 +62,13 @@ body {
 
 
 #about {
-    height: 100vh;
+    height: 60vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.05rem;
+}
+.underline {
+    text-decoration: underline;
+    color: #f3b14d;
 }
 
 @media(max-width: 768px) {
